--- a/Templates/article_template.html
+++ b/Templates/article_template.html
@@ -57,6 +57,10 @@
           <h5>Date</h5>
 
           <p class="first_section_break"></p>
+          <h3>Introduction</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis eros id dolor pulvinar, et faucibus ligula laoreet. Cras sed elit luctus, mollis dui quis, interdum massa. Phasellus et vestibulum arcu. Etiam at finibus lacus. Vivamus quis lorem sed sem convallis hendrerit. Praesent tempor dolor eu ante convallis, vel vehicula nisl iaculis. Aliquam justo turpis, vehicula vitae arcu et, eleifend gravida lacus. Suspendisse efficitur cursus elit vel tristique. Etiam sit amet molestie arcu. Nam condimentum nisi non velit malesuada, nec pretium dui facilisis. Nullam sed leo sed felis tempus facilisis.</p>
+
+          <p class="section_break"></p>
           <h3>First Heading</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis eros id dolor pulvinar, et faucibus ligula laoreet. Cras sed elit luctus, mollis dui quis, interdum massa. Phasellus et vestibulum arcu. Etiam at finibus lacus. Vivamus quis lorem sed sem convallis hendrerit. Praesent tempor dolor eu ante convallis, vel vehicula nisl iaculis. Aliquam justo turpis, vehicula vitae arcu et, eleifend gravida lacus. Suspendisse efficitur cursus elit vel tristique. Etiam sit amet molestie arcu. Nam condimentum nisi non velit malesuada, nec pretium dui facilisis. Nullam sed leo sed felis tempus facilisis.</p>
           <img src="example_image_1.jpg" alt="Descriptive text for the image" class="example_image_1">
@@ -82,6 +86,27 @@
           <p>Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam imperdiet massa eu augue bibendum scelerisque. Curabitur vel dui ipsum. Nullam ut magna justo. Praesent facilisis ante mauris, tincidunt porta eros tincidunt at. Nulla porta enim et aliquam tempus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam eleifend vel ex ut sodales. Nullam egestas nulla velit, et dapibus ligula lacinia ac. Mauris vehicula tincidunt nulla, sit amet euismod erat euismod id. Vivamus vehicula rutrum neque sit amet dignissim. Nulla sagittis tortor cursus odio pretium, vel semper velit faucibus. Suspendisse vitae egestas erat. Vestibulum odio felis, mattis ac nisl non, ultricies elementum nunc.</p>
           <h4>Second Subheading</h4>
           <p>Praesent commodo dictum urna malesuada blandit. Maecenas sit amet venenatis urna, id lobortis ligula. Etiam non tincidunt diam, eu blandit massa. Donec sollicitudin dui lacus, tempor aliquet velit eleifend non. Aliquam ornare sit amet massa nec ornare. Donec est nulla, vehicula eu rutrum sed, tempus lobortis mi. Suspendisse potenti.</p>
+       
+          <p class="section_break"></p>
+          <h3>Conclusion</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis eros id dolor pulvinar, et faucibus ligula laoreet. Cras sed elit luctus, mollis dui quis, interdum massa. Phasellus et vestibulum arcu. Etiam at finibus lacus. Vivamus quis lorem sed sem convallis hendrerit. Praesent tempor dolor eu ante convallis, vel vehicula nisl iaculis. Aliquam justo turpis, vehicula vitae arcu et, eleifend gravida lacus. Suspendisse efficitur cursus elit vel tristique. Etiam sit amet molestie arcu. Nam condimentum nisi non velit malesuada, nec pretium dui facilisis. Nullam sed leo sed felis tempus facilisis.</p>
+
+          <p class="section_break"></p>
+          <hr class="faint-line">
+          <section id="about-author">
+            <div class="flex_author">
+              <div class="author_name_group">
+                <h3 style="padding-bottom: 5px;">Author Name</h3>
+                <a href="https://www.linkedin.com/feed/" target="_blank"><img src="../Authors/Socials/LinkedIn.png" alt="LinkedIn Logo" class="logo_image"></a>
+                <a href="#" target="_blank"><img src="../Authors/Socials/X.png" alt="X Logo" class="logo_image"></a>
+                <a href="#" target="_blank"><img src="../Authors/Socials/Instagram.png" alt="Instagram Logo" class="logo_image"></a>
+                <a href="#" target="_blank"><img src="../Authors/Socials/facebook.png" alt="Facebook Logo" class="logo_image"></a>
+              </div>
+              <img src="../Authors/Blank.jpg" alt="Author Portrait" class="author_image">
+            </div>
+            <p><strong>[Author Name]</strong> is an aerospace engineer with [X] years of experience in [specific field or industry]. Specializing in [specialization], they have contributed to projects such as [notable project/achievement]. [Author Name] is passionate about [personal interest or value] and is dedicated to [goal or mission related to aerospace]. In their spare time, they enjoy [personal hobby or activity].</p>
+          </section>
+
         </div> 
 
         <footer>
