--- a/Templates/article_template.html
+++ b/Templates/article_template.html
@@ -59,6 +59,9 @@
           <p class="first_section_break"></p>
           <h3>Introduction</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis eros id dolor pulvinar, et faucibus ligula laoreet. Cras sed elit luctus, mollis dui quis, interdum massa. Phasellus et vestibulum arcu. Etiam at finibus lacus. Vivamus quis lorem sed sem convallis hendrerit. Praesent tempor dolor eu ante convallis, vel vehicula nisl iaculis. Aliquam justo turpis, vehicula vitae arcu et, eleifend gravida lacus. Suspendisse efficitur cursus elit vel tristique. Etiam sit amet molestie arcu. Nam condimentum nisi non velit malesuada, nec pretium dui facilisis. Nullam sed leo sed felis tempus facilisis.</p>
+          <div class="video-container">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/AgqZMK22LEk?si=MGQ3oAfN3A_bB67W" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          </div>
 
           <p class="section_break"></p>
           <h3>First Heading</h3>
