--- a/basic-info.css
+++ b/basic-info.css
@@ -80,6 +80,16 @@ h6 {
   margin: 0px;
 }
 
+.p {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  line-height: 1.5em;
+  letter-spacing: 0.01em;
+  text-transform: none;
+  font-size: 20px;
+}
+
 .p1 {
   font-family: 'Raleway', sans-serif;
   font-weight: 500;
