--- a/Templates/link_template.css
+++ b/Templates/link_template.css
@@ -102,6 +102,7 @@ body {
 }
 
 .card-title {
+  text-align: center; /* Centers the text horizontally */
   font-size: 1.5rem;
   padding-top: 15px;
   padding-bottom: 10px;
@@ -109,6 +110,7 @@ body {
 }
 
 .card-description {
+  text-align: center; /* Centers the text horizontally */
   font-size: 1rem;
   padding-left: 10px;
   padding-right: 10px;
