--- a/engineering_roles/structural_analysis/home.css
+++ b/engineering_roles/structural_analysis/home.css
@@ -104,6 +104,8 @@ body {
 .card-title {
   text-align: center; /* Centers the text horizontally */
   font-size: 1.5rem;
+  padding-left: 10px;
+  padding-right: 10px;
   padding-top: 15px;
   padding-bottom: 10px;
   color: #495A58;
@@ -126,7 +128,7 @@ body {
   padding: 10px;
   text-decoration: none;
   border-radius: 4px;
-  margin-top: 10px;
+  margin-top: 0px;
   margin-bottom: 10px;
   transition: background-color 0.2s;
   font-size: 1.1rem;
