--- a/Templates/article_template.html
+++ b/Templates/article_template.html
@@ -87,6 +87,21 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis eros id dolor pulvinar, et faucibus ligula laoreet. Cras sed elit luctus, mollis dui quis, interdum massa. Phasellus et vestibulum arcu. Etiam at finibus lacus. Vivamus quis lorem sed sem convallis hendrerit. Praesent tempor dolor eu ante convallis, vel vehicula nisl iaculis. Aliquam justo turpis, vehicula vitae arcu et, eleifend gravida lacus. Suspendisse efficitur cursus elit vel tristique. Etiam sit amet molestie arcu. Nam condimentum nisi non velit malesuada, nec pretium dui facilisis. Nullam sed leo sed felis tempus facilisis.</p>
 
           <p class="section_break"></p>
+          <h3>Bibliography</h3>
+          <div class="entry">
+            <p>Smith, John. <i>The Art of Science</i>. Penguin Books, 2020.</p>
+          </div>
+          <div class="entry">
+            <p>Doe, Jane. "Exploring the Universe." <i>Scientific American</i>, vol. 322, no. 4, 2021, pp. 45-60.</p>
+          </div>
+          <div class="entry">
+            <p>Johnson, Mark. "The Future of Space Travel." <i>New York Times</i>, 15 Aug. 2022, www.nytimes.com/future-space.</p>
+          </div>
+          <div class="entry">
+            <p>NASA. "Mars Exploration Program." NASA, 2023, www.nasa.gov/mars-exploration.</p>
+          </div>
+
+          <p class="section_break"></p>
           <hr class="faint-line">
           <section id="about-author">
             <div class="flex_author">
