--- a/Templates/article_template.html
+++ b/Templates/article_template.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" type="text/css" href="../basic-info.css">
   <link rel="stylesheet" type="text/css" href="./article_template.css">
   <script src="../nav-bar.js"></script>
+  <script src="./article_template.js"></script>
   <link rel="icon" type="image/x-icon" href="../Secondary_Logo.png">
 </head>
   <title>Article Title - The Aerospace Manual</title>
@@ -85,6 +86,49 @@
           <p class="section_break"></p>
           <h3>Conclusion</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis eros id dolor pulvinar, et faucibus ligula laoreet. Cras sed elit luctus, mollis dui quis, interdum massa. Phasellus et vestibulum arcu. Etiam at finibus lacus. Vivamus quis lorem sed sem convallis hendrerit. Praesent tempor dolor eu ante convallis, vel vehicula nisl iaculis. Aliquam justo turpis, vehicula vitae arcu et, eleifend gravida lacus. Suspendisse efficitur cursus elit vel tristique. Etiam sit amet molestie arcu. Nam condimentum nisi non velit malesuada, nec pretium dui facilisis. Nullam sed leo sed felis tempus facilisis.</p>
+
+          <p class="section_break"></p>
+          <h3>Quiz</h3>
+          <div class="question">
+            <h4>Question 1</h4>
+            <p style="padding-bottom: 5px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis eros id dolor pulvinar, et faucibus ligula laoreet. Cras sed elit luctus, mollis dui quis, interdum massa?</p>
+            <button class="toggle-btn" onclick="toggleSolution('q1_w', 'caret1_w')"><span id="caret1_w" class="caret">▶</span> Show Work</button>
+            <div class="solution sol_w" id="q1_w">Place Work Here.</div>
+            <button class="toggle-btn" onclick="toggleSolution('q1_a', 'caret1_a')"><span id="caret1_a" class="caret">▶</span> Show Answer</button>
+            <div class="solution sol_a" id="q1_a">Place Answer Here.</div>
+          </div>
+          <div class="question">
+            <h4>Question 2</h4>
+            <p style="padding-bottom: 5px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis eros id dolor pulvinar, et faucibus ligula laoreet. Cras sed elit luctus, mollis dui quis, interdum massa?</p>
+            <button class="toggle-btn" onclick="toggleSolution('q2_w', 'caret2_w')"><span id="caret2_w" class="caret">▶</span> Show Work</button>
+            <div class="solution sol_w" id="q2_w">Place Work Here.</div>
+            <button class="toggle-btn" onclick="toggleSolution('q2_a', 'caret2_a')"><span id="caret2_a" class="caret">▶</span> Show Answer</button>
+            <div class="solution sol_a" id="q2_a">Place Answer Here.</div>
+          </div>
+          <div class="question">
+            <h4>Question 3</h4>
+            <p style="padding-bottom: 5px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis eros id dolor pulvinar, et faucibus ligula laoreet. Cras sed elit luctus, mollis dui quis, interdum massa?</p>
+            <button class="toggle-btn" onclick="toggleSolution('q3_w', 'caret3_w')"><span id="caret3_w" class="caret">▶</span> Show Work</button>
+            <div class="solution sol_w" id="q3_w">Place Work Here.</div>
+            <button class="toggle-btn" onclick="toggleSolution('q3_a', 'caret3_a')"><span id="caret3_a" class="caret">▶</span> Show Answer</button>
+            <div class="solution sol_a" id="q3_a">Place Answer Here.</div>
+          </div>
+          <div class="question">
+            <h4>Question 4</h4>
+            <p style="padding-bottom: 5px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis eros id dolor pulvinar, et faucibus ligula laoreet. Cras sed elit luctus, mollis dui quis, interdum massa?</p>
+            <button class="toggle-btn" onclick="toggleSolution('q4_w', 'caret4_w')"><span id="caret4_w" class="caret">▶</span> Show Work</button>
+            <div class="solution sol_w" id="q4_w">Place Work Here.</div>
+            <button class="toggle-btn" onclick="toggleSolution('q4_a', 'caret4_a')"><span id="caret4_a" class="caret">▶</span> Show Answer</button>
+            <div class="solution sol_a" id="q4_a">Place Answer Here.</div>
+          </div>
+          <div class="question">
+            <h4>Question 5</h4>
+            <p style="padding-bottom: 5px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis eros id dolor pulvinar, et faucibus ligula laoreet. Cras sed elit luctus, mollis dui quis, interdum massa?</p>
+            <button class="toggle-btn" onclick="toggleSolution('q5_w', 'caret5_w')"><span id="caret5_w" class="caret">▶</span> Show Work</button>
+            <div class="solution sol_w" id="q5_w">Place Work Here.</div>
+            <button class="toggle-btn" onclick="toggleSolution('q5_a', 'caret5_a')"><span id="caret5_a" class="caret">▶</span> Show Answer</button>
+            <div class="solution sol_a" id="q5_a">Place Answer Here.</div>
+          </div>
 
           <p class="section_break"></p>
           <h3>Bibliography</h3>
