--- a/Templates/article_template.css
+++ b/Templates/article_template.css
@@ -124,7 +124,7 @@ body {
   font-size: 16px;
   margin-top: 5px;
   padding: 5px 10px;
-  background-color: #FFFFFF;
+  background-color: transparent;
 }
 
 .sol_w {
