--- a/templates/article_template.html
+++ b/templates/article_template.html
@@ -50,21 +50,42 @@
           <h5>Date</h5>
 
           <p class="first_section_break"></p>
-          <h3>Introduction</h3>
+          <div id="toc">
+            <button class="toggle-btn" onclick="toggleSolution('toc_list', 'caret_toc')"><span id="caret_toc" class="caret_toc">▶</span><h3>Table of Contents</h3></button>
+            <ul id="toc_list" class="toc_list">
+                <li><a href="#introduction">Introduction</a></li>
+                <li><a href="#first_heading">First Heading</a></li>
+                <li><a href="#second_heading">Second Heading</a></li>
+                <li>
+                  <a href="#third_heading">Third Heading</a>
+                  <ul class="toc_subsection">
+                    <li><a href="#third_p_one_heading">First Subheading</a></li>
+                    <li><a href="#third_p_two_heading">Second Subheading</a></li>
+                  </ul>
+                </li>
+                <li><a href="#conclusion">Conclusion</a></li>
+                <li><a href="#quiz">Quiz</a></li>
+                <li><a href="#bibliography">Bibliography</a></li>
+                <li><a href="#author">Author</a></li>
+            </ul>
+        </div>
+
+          <p class="half_section_break"></p>
+          <h3 id="introduction">Introduction</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis eros id dolor pulvinar, et faucibus ligula laoreet. Cras sed elit luctus, mollis dui quis, interdum massa. Phasellus et vestibulum arcu. Etiam at finibus lacus. Vivamus quis lorem sed sem convallis hendrerit. Praesent tempor dolor eu ante convallis, vel vehicula nisl iaculis. Aliquam justo turpis, vehicula vitae arcu et, eleifend gravida lacus. Suspendisse efficitur cursus elit vel tristique. Etiam sit amet molestie arcu. Nam condimentum nisi non velit malesuada, nec pretium dui facilisis. Nullam sed leo sed felis tempus facilisis.</p>
           <div class="video-container">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/AgqZMK22LEk?si=MGQ3oAfN3A_bB67W" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           </div>
 
           <p class="section_break"></p>
-          <h3>First Heading</h3>
+          <h3 id="first_heading">First Heading</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis eros id dolor pulvinar, et faucibus ligula laoreet. Cras sed elit luctus, mollis dui quis, interdum massa. Phasellus et vestibulum arcu. Etiam at finibus lacus. Vivamus quis lorem sed sem convallis hendrerit. Praesent tempor dolor eu ante convallis, vel vehicula nisl iaculis. Aliquam justo turpis, vehicula vitae arcu et, eleifend gravida lacus. Suspendisse efficitur cursus elit vel tristique. Etiam sit amet molestie arcu. Nam condimentum nisi non velit malesuada, nec pretium dui facilisis. Nullam sed leo sed felis tempus facilisis.</p>
           <img src="example_image_1.jpg" alt="Descriptive text for the image" class="example_image_1">
           <h6>Figure X. Image description goes here</h6>
           <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. In a fringilla magna. Cras dapibus dictum justo ac tincidunt. Praesent malesuada magna ut lectus elementum, id faucibus arcu auctor. Aenean et velit augue. Vestibulum vel ante viverra arcu dapibus ornare sed efficitur tortor. Nunc porttitor, nisi sed tristique pulvinar, purus diam porttitor lorem, eget pharetra augue lorem in augue. In a turpis sapien.</p>
           
           <p class="section_break"></p>
-          <h3>Second Heading</h3>
+          <h3 id="second_heading">Second Heading</h3>
           <div class="flex_image_2">
             <div class="text_image_2">
             <p>Sed sed dapibus mi. Nam vitae mauris ipsum. Curabitur tempor scelerisque enim. Mauris eros arcu, scelerisque sit amet lacus ac, malesuada luctus nulla. Fusce id mauris varius, aliquet urna iaculis, porta nisl. Nulla varius euismod massa. Praesent vel ex nec tellus pharetra lacinia. Curabitur fermentum nisl a elit fringilla, id gravida nibh aliquam. Donec aliquam blandit ante vel fringilla. Proin a fringilla diam. Donec sodales, risus ac sagittis eleifend, est purus vulputate turpis, eget fermentum leo dui vel est. Aliquam pretium, enim at imperdiet iaculis, diam metus luctus augue, et cursus risus augue a enim. Integer porta lectus ipsum, non hendrerit ipsum tincidunt a. Ut eget convallis nulla. Sed sed dapibus mi. Nam vitae mauris ipsum. Curabitur tempor scelerisque enim. Mauris eros arcu, scelerisque sit amet lacus ac, malesuada luctus nulla. Fusce id mauris varius, aliquet urna iaculis, porta nisl. Nulla varius euismod massa. Praesent vel ex nec tellus pharetra lacinia. Curabitur fermentum nisl a elit fringilla, id gravida nibh aliquam. Donec aliquam blandit ante vel fringilla. Proin a fringilla diam. Donec sodales, risus ac sagittis eleifend, est purus vulputate turpis, eget fermentum leo dui vel est. Aliquam pretium, enim at imperdiet iaculis, diam metus luctus augue, et cursus risus augue a enim. Integer porta lectus ipsum, non hendrerit ipsum tincidunt a. Ut eget convallis nulla.</p>
@@ -77,18 +98,18 @@
           </div>
 
           <p class="section_break"></p>
-          <h3>Third Heading</h3>
-          <h4>First Subheading</h4>
+          <h3 id="third_heading">Third Heading</h3>
+          <h4 id="third_p_one_heading">First Subheading</h4>
           <p>Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam imperdiet massa eu augue bibendum scelerisque. Curabitur vel dui ipsum. Nullam ut magna justo. Praesent facilisis ante mauris, tincidunt porta eros tincidunt at. Nulla porta enim et aliquam tempus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam eleifend vel ex ut sodales. Nullam egestas nulla velit, et dapibus ligula lacinia ac. Mauris vehicula tincidunt nulla, sit amet euismod erat euismod id. Vivamus vehicula rutrum neque sit amet dignissim. Nulla sagittis tortor cursus odio pretium, vel semper velit faucibus. Suspendisse vitae egestas erat. Vestibulum odio felis, mattis ac nisl non, ultricies elementum nunc.</p>
-          <h4>Second Subheading</h4>
+          <h4 id="third_p_two_heading">Second Subheading</h4>
           <p>Praesent commodo dictum urna malesuada blandit. Maecenas sit amet venenatis urna, id lobortis ligula. Etiam non tincidunt diam, eu blandit massa. Donec sollicitudin dui lacus, tempor aliquet velit eleifend non. Aliquam ornare sit amet massa nec ornare. Donec est nulla, vehicula eu rutrum sed, tempus lobortis mi. Suspendisse potenti.</p>
        
           <p class="section_break"></p>
-          <h3>Conclusion</h3>
+          <h3 id="conclusion">Conclusion</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis eros id dolor pulvinar, et faucibus ligula laoreet. Cras sed elit luctus, mollis dui quis, interdum massa. Phasellus et vestibulum arcu. Etiam at finibus lacus. Vivamus quis lorem sed sem convallis hendrerit. Praesent tempor dolor eu ante convallis, vel vehicula nisl iaculis. Aliquam justo turpis, vehicula vitae arcu et, eleifend gravida lacus. Suspendisse efficitur cursus elit vel tristique. Etiam sit amet molestie arcu. Nam condimentum nisi non velit malesuada, nec pretium dui facilisis. Nullam sed leo sed felis tempus facilisis.</p>
 
           <p class="section_break"></p>
-          <h3>Quiz</h3>
+          <h3 id="quiz">Quiz</h3>
           <div class="question">
             <h4>Question 1</h4>
             <p style="padding-bottom: 5px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis eros id dolor pulvinar, et faucibus ligula laoreet. Cras sed elit luctus, mollis dui quis, interdum massa?</p>
@@ -131,7 +152,7 @@
           </div>
 
           <p class="section_break"></p>
-          <h3>Bibliography</h3>
+          <h3 id="bibliography">Bibliography</h3>
           <div class="entry">
             <p>Smith, John. <i>The Art of Science</i>. Penguin Books, 2020.</p>
           </div>
@@ -150,7 +171,7 @@
           <section id="about-author">
             <div class="flex_author">
               <div class="author_name_group">
-                <h3 style="padding-bottom: 5px;">Author Name</h3>
+                <h3 style="padding-bottom: 5px;" id="author">Author Name</h3>
                 <a href="https://www.linkedin.com/feed/" target="_blank"><img src="../Authors/Socials/LinkedIn.png" alt="LinkedIn Logo" class="logo_image"></a>
                 <a href="#" target="_blank"><img src="../Authors/Socials/X.png" alt="X Logo" class="logo_image"></a>
                 <a href="#" target="_blank"><img src="../Authors/Socials/Instagram.png" alt="Instagram Logo" class="logo_image"></a>
