--- a/templates/article_template.html
+++ b/templates/article_template.html
@@ -113,41 +113,41 @@
           <div class="question">
             <h4>Question 1</h4>
             <p style="padding-bottom: 5px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis eros id dolor pulvinar, et faucibus ligula laoreet. Cras sed elit luctus, mollis dui quis, interdum massa?</p>
-            <button class="toggle-btn" onclick="toggleSolution('q1_w', 'caret1_w')"><span id="caret1_w" class="caret">▶</span> Show Work</button>
+            <button class="toggle-btn" onclick="toggleSolution('q1_w', 'caret1_w');changeSpanText('work_1')"><span id="caret1_w" class="caret">▶</span><span id="work_1"> Show Work</span></button>
             <div class="solution sol_w" id="q1_w">Place Work Here.</div>
-            <button class="toggle-btn" onclick="toggleSolution('q1_a', 'caret1_a')"><span id="caret1_a" class="caret">▶</span> Show Answer</button>
+            <button class="toggle-btn" onclick="toggleSolution('q1_a', 'caret1_a');changeSpanText('answer_1')"><span id="caret1_a" class="caret">▶</span><span id="answer_1"> Show Answer</span></button>
             <div class="solution sol_a" id="q1_a">Place Answer Here.</div>
           </div>
           <div class="question">
             <h4>Question 2</h4>
             <p style="padding-bottom: 5px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis eros id dolor pulvinar, et faucibus ligula laoreet. Cras sed elit luctus, mollis dui quis, interdum massa?</p>
-            <button class="toggle-btn" onclick="toggleSolution('q2_w', 'caret2_w')"><span id="caret2_w" class="caret">▶</span> Show Work</button>
+            <button class="toggle-btn" onclick="toggleSolution('q2_w', 'caret2_w');changeSpanText('work_2')"><span id="caret2_w" class="caret">▶</span><span id="work_2"> Show Work</span></button>
             <div class="solution sol_w" id="q2_w">Place Work Here.</div>
-            <button class="toggle-btn" onclick="toggleSolution('q2_a', 'caret2_a')"><span id="caret2_a" class="caret">▶</span> Show Answer</button>
+            <button class="toggle-btn" onclick="toggleSolution('q2_a', 'caret2_a');changeSpanText('answer_2')"><span id="caret2_a" class="caret">▶</span><span id="answer_2"> Show Answer</span></button>
             <div class="solution sol_a" id="q2_a">Place Answer Here.</div>
           </div>
           <div class="question">
             <h4>Question 3</h4>
             <p style="padding-bottom: 5px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis eros id dolor pulvinar, et faucibus ligula laoreet. Cras sed elit luctus, mollis dui quis, interdum massa?</p>
-            <button class="toggle-btn" onclick="toggleSolution('q3_w', 'caret3_w')"><span id="caret3_w" class="caret">▶</span> Show Work</button>
+            <button class="toggle-btn" onclick="toggleSolution('q3_w', 'caret3_w');changeSpanText('work_3')"><span id="caret3_w" class="caret">▶</span><span id="work_3"> Show Work</span></button>
             <div class="solution sol_w" id="q3_w">Place Work Here.</div>
-            <button class="toggle-btn" onclick="toggleSolution('q3_a', 'caret3_a')"><span id="caret3_a" class="caret">▶</span> Show Answer</button>
+            <button class="toggle-btn" onclick="toggleSolution('q3_a', 'caret3_a');changeSpanText('answer_3')"><span id="caret3_a" class="caret">▶</span><span id="answer_3"> Show Answer</span></button>
             <div class="solution sol_a" id="q3_a">Place Answer Here.</div>
           </div>
           <div class="question">
             <h4>Question 4</h4>
             <p style="padding-bottom: 5px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis eros id dolor pulvinar, et faucibus ligula laoreet. Cras sed elit luctus, mollis dui quis, interdum massa?</p>
-            <button class="toggle-btn" onclick="toggleSolution('q4_w', 'caret4_w')"><span id="caret4_w" class="caret">▶</span> Show Work</button>
+            <button class="toggle-btn" onclick="toggleSolution('q4_w', 'caret4_w');changeSpanText('work_4')"><span id="caret4_w" class="caret">▶</span><span id="work_4"> Show Work</span></button>
             <div class="solution sol_w" id="q4_w">Place Work Here.</div>
-            <button class="toggle-btn" onclick="toggleSolution('q4_a', 'caret4_a')"><span id="caret4_a" class="caret">▶</span> Show Answer</button>
+            <button class="toggle-btn" onclick="toggleSolution('q4_a', 'caret4_a');changeSpanText('answer_4')"><span id="caret4_a" class="caret">▶</span><span id="answer_4"> Show Answer</span></button>
             <div class="solution sol_a" id="q4_a">Place Answer Here.</div>
           </div>
           <div class="question">
             <h4>Question 5</h4>
             <p style="padding-bottom: 5px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis eros id dolor pulvinar, et faucibus ligula laoreet. Cras sed elit luctus, mollis dui quis, interdum massa?</p>
-            <button class="toggle-btn" onclick="toggleSolution('q5_w', 'caret5_w')"><span id="caret5_w" class="caret">▶</span> Show Work</button>
+            <button class="toggle-btn" onclick="toggleSolution('q5_w', 'caret5_w');changeSpanText('work_5')"><span id="caret5_w" class="caret">▶</span><span id="work_5"> Show Work</span></button>
             <div class="solution sol_w" id="q5_w">Place Work Here.</div>
-            <button class="toggle-btn" onclick="toggleSolution('q5_a', 'caret5_a')"><span id="caret5_a" class="caret">▶</span> Show Answer</button>
+            <button class="toggle-btn" onclick="toggleSolution('q5_a', 'caret5_a');changeSpanText('answer_5')"><span id="caret5_a" class="caret">▶</span><span id="answer_5"> Show Answer</span></button>
             <div class="solution sol_a" id="q5_a">Place Answer Here.</div>
           </div>
 
