--- a/templates/article_template.html
+++ b/templates/article_template.html
@@ -172,12 +172,12 @@
             <div class="flex_author">
               <div class="author_name_group">
                 <h3 style="padding-bottom: 5px;" id="author">Author Name</h3>
-                <a href="https://www.linkedin.com/feed/" target="_blank"><img src="../Authors/Socials/LinkedIn.png" alt="LinkedIn Logo" class="logo_image"></a>
-                <a href="#" target="_blank"><img src="../Authors/Socials/X.png" alt="X Logo" class="logo_image"></a>
-                <a href="#" target="_blank"><img src="../Authors/Socials/Instagram.png" alt="Instagram Logo" class="logo_image"></a>
-                <a href="#" target="_blank"><img src="../Authors/Socials/facebook.png" alt="Facebook Logo" class="logo_image"></a>
+                <a href="https://www.linkedin.com/feed/" target="_blank"><img src="../authors/Socials/LinkedIn.png" alt="LinkedIn Logo" class="logo_image"></a>
+                <a href="#" target="_blank"><img src="../authors/Socials/X.png" alt="X Logo" class="logo_image"></a>
+                <a href="#" target="_blank"><img src="../authors/Socials/Instagram.png" alt="Instagram Logo" class="logo_image"></a>
+                <a href="#" target="_blank"><img src="../authors/Socials/facebook.png" alt="Facebook Logo" class="logo_image"></a>
               </div>
-              <img src="../Authors/Blank.jpg" alt="Author Portrait" class="author_image">
+              <img src="../authors/Blank.jpg" alt="Author Portrait" class="author_image">
             </div>
             <p><strong>[Author Name]</strong> is an aerospace engineer with [X] years of experience in [specific field or industry]. Specializing in [specialization], they have contributed to projects such as [notable project/achievement]. [Author Name] is passionate about [personal interest or value] and is dedicated to [goal or mission related to aerospace]. In their spare time, they enjoy [personal hobby or activity].</p>
           </section>
