--- a/nav-bar.css
+++ b/nav-bar.css
@@ -60,7 +60,7 @@ div.navbar button {
 
 .overlay {
   height: 100%;
-  width: 0;
+  width: 0%;
   position: fixed;
   z-index: 11;
   top: 0;
@@ -80,13 +80,10 @@ div.navbar button {
 }
 
 .overlay a {
-  padding: 8px;
-  padding-right: 30px;
   font-family: 'Space Grotesk', sans-serif;
   text-decoration: none;
   font-size: 36px;
   color: #FFFFFF;
-  display: block;
   transition: 0.3s;
   cursor: pointer;
 }
@@ -101,15 +98,51 @@ div.navbar button {
 
 /* Permanent underline for clicked item */
 .overlay-content a.underlined {
+  opacity: 1;
   text-decoration: underline !important;
+}
+
+.overlay-content a.highlighted {
+  opacity: 1 !important;
 }
 
 .overlay-content a.faded {
   opacity: 0.5;  /* Fade out effect */
 }
 
+.nav_group {
+  display: block;  /* Keeps text and arrow grouped */
+  padding: 8px;
+}
+
+.overlay i {
+  text-decoration: none;
+  margin-right: 30px;
+  color: #FFFFFF;
+  transition: 0.3s;
+  cursor: pointer;
+  opacity: 0.5;
+}
+
+.overlay-content i {
+  transition: opacity 0.3s ease;  /* Smooth transition */
+}
+
+.overlay-content i:hover {
+  opacity: 1;
+}
+
+/* Permanent underline for clicked item */
+.overlay-content i.highlighted {
+  opacity: 1 !important;
+}
+
+.overlay-content i.faded {
+  opacity: 0.5;
+}
+
 .overlay .closebtn {
-  padding-right: 8px;
+  padding: 8px;
   position: absolute;
   top: 12px;
   left: 53px;
